# one-star-reviews

./: .gitattributes  .gitignore  2  analyse.py  base.json  count.txt  echo  examples.py  finetune.py  finetune_names.txt  input_examples.json  labelling.py  main.py  min.txt  model_list.txt  new_input_examples.json  old.py  output_examples.json  poles.py  prompt.md  prompt.txt  prompt_examples.json  pyproject.toml  recover.py  requirements.txt  spark.py  tuning.py
docs/: README.md
nix/: cuda-fhs.nix  cuda.nix  python-shell.nix  shell.nix  test.nix
sql/: avg-eval-by-category.sql  avg-eval-by-helpful.sql  avg-eval-by-month-year.sql  avg-eval-by-month.sql  avg-eval-by-price.sql  avg-eval-by-purchase.sql  avg-eval-by-rating.sql  avg-eval-by-year.sql  avg-rating-by-category.sql  avg-rating-by-year.sql  corr-avg-rating-eval.sql  corr-eval-purchase.sql  corr-price-eval.sql  pct-eval.sql  running-total-by-month-year.sql  stddev-eval-by-rating.sql
src/: analyse.py  download.py  finetune.py  main.py  prompt.md
src/data/: input_examples.json  new_input_examples.json  new_output_examples.json  output_examples.json
src/sql/: avg-eval-by-category.sql  avg-eval-by-helpful.sql  avg-eval-by-length.sql  avg-eval-by-price.sql  avg-eval-by-purchase.sql  avg-rating-by-month-year.sql  avg-rating-by-month.sql  avg-rating-by-purchase.sql  corr-eval-length.sql  corr-eval-month.sql  corr-eval-n-ratings.sql  corr-eval-rating.sql  corr-eval-year.sql  corr-help-eval.sql  corr-price-eval.sql  eval-regression.sql  pct-eval.sql  (+3 more)
tuning/: inference.py  main.py  requirements.txt  test_prompt.txt
(+5 files in other folders)
