[project]
name = "one-star-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyspark==3.5.2",
  "requests==2.32.3",
  "beautifulsoup4==4.12.3",
  "python-dotenv==1.0.1",
  "delta-spark==3.2.0",
  "deltalake==0.19.2",
  "duckdb==1.1.0",
  "polars==1.9.0",
  "plotly==5.24.1",
  "google-generativeai==0.8.3",
  "statsmodels==0.14.4",
]
